<resources>
    <string name="app_name">nomeworkNotes</string>
    <string name="no_notes">Нет задач</string>
    <string name="done_label">Готово</string>
    <string name="app_title">Задачи</string>
    <string name="app_description">Список задач</string>

    <!-- экран редактирования задачи/заметки -->
    <string name="edit_title">Редактирование задачи</string>
    <string name="hint_title">Заголовок</string>
    <string name="hint_description">Описание</string>
    <string name="hint_priority">Приоритет</string>
    <string name="hint_deadline">Дедлайн</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_cancel">Отмена</string>
    <string name="msg_enter_title">Введите заголовок</string>
    <string name="deadline_not_set">не установлено</string>

<!--    подтверждение удаления, диалог-->
    <string name="confirm_delete_title">Удалить заметку</string>
    <string name="confirm_delete_message">Вы уверены, что хотите удалить заметку \"%s\"?</string>
    <string name="confirm_delete_positive">Удалить</string>
    <string name="confirm_delete_negative">Отмена</string>

<!--    экран настроек-->
    <string name="preferences">Настройки</string>
    <string name="dark_mode">Тёмная тема</string>
    <string name="notifications">Уведомления</string>
    <string name="done">Готово</string>
    <string name="priority_label">Приоритет:</string>
</resources>